# Go2-Dynamic-Inspection

./: README.md  frames_2025-10-23_09.50.36.gv
Visual_inspection/Camera calibration/: README.md
Visual_inspection/Camera calibration/src/insta360_ros/: setup.py
Visual_inspection/Camera calibration/src/insta360_tools/: package.xml
Visual_inspection/Camera calibration/src/insta360_undistort/: setup.cfg  setup.py
Visual_inspection/Gauge reading/VLM based gauge reading/: dataset_download.py
Visual_inspection/Gauge reading/VLM based gauge reading/method1-VLMreasoning/: evaluate_method1.py  requirements.txt
Visual_inspection/Gauge reading/VLM_based_gague_reading_method/: .env
Visual_inspection/Gauge reading/VLM_based_gague_reading_method/method1-VLMreasoning/: run_full_evaluation.py  test_env.py
Visual_inspection/Gauge reading/method1-VLMreasoning/: answer_parser.py  run_method1.py  vlm_client.py
Visual_inspection/Gauge reading/method1-VLMreasoning/results/: gemini-2.5-flash_predictions.json  gpt-4o_predictions.json  (+76 more)
scripts/: launch.sh  sim.sh
vision_inspection/Camera calibration/: commnds
vision_inspection/Gauge reading/VLM based gauge reading/: .env
vision_inspection/Gauge reading/method1-VLMreasoning/: README.md  method1_inference.py
workspaces/autonomous_exploration/src/go2_simulator/: CMakeLists.txt  package.xml
workspaces/autonomous_exploration/src/go2_simulator/launch/: system_real_robot.launch
workspaces/dlio/: check_gpu_status.sh
workspaces/dlio/src/: CMakeLists.txt  QUICK_REFERENCE.txt  build_gpu.sh  fix_vectors.sh  setup_cuda12.sh
(+280 files in other folders)
